[naveenveera789] add : dashboard design is done

--- a/src/app/components/signup/signup.component.scss
+++ b/src/app/components/signup/signup.component.scss
@@ -2,6 +2,7 @@
     margin-top: 5%;
 }
 .design{
+    padding-left: 23px;
     border-style:double;
     border-color:lightgray;
     border-radius: 1.5%;
