--- a/src/app/components/resetpassword/resetpassword.component.html
+++ b/src/app/components/resetpassword/resetpassword.component.html
@@ -15,7 +15,7 @@
             <div fxLayout="column">
                 <mat-form-field appearance="outline">
                     <mat-label>New Password</mat-label>
-                    <input matInput [type]="showPassword ? 'text' : 'password'" formControlName="password" >
+                    <input matInput [type]="showPassword ? 'text' : 'password'" formControlName="nPassword" >
                     <mat-error>Password is required</mat-error>
                 </mat-form-field>
                 <mat-form-field appearance="outline">
