[naveenveera789] add : The design of take-notes and icons components are  done

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -5,11 +5,13 @@
           <img class="keep_img" src="assets/keep_2020q4_48dp.png" alt="">
           <p class="heading">Fundoo</p>
         </div>
-        <div class="searchBar" fxFlex=40 fxLayout="row" fxLayoutAlign="start center">
-          <div class="container1" fxLayoutAlign="center center">
-            <button mat-icon-button class="button" ><img src="assets/search_black_24dp.svg" ></button>
-            <input matInput class="searchtext" type="text" placeholder="Search">
-          </div>   
+        <div class="searchBar" fxLayout="row" fxLayoutAlign="start center">
+          <div>
+            <button mat-icon-button class="search"><img src="assets/search_black_24dp.svg"></button>
+          </div>
+          <div>
+            <input type="text" class="searchtext" placeholder="Search">
+          </div>
         </div>
         <div class="icons" fxLayout="row" fxLayoutAlign="end" fxLayoutGap="20px">
           <div>
