--- a/src/app/components/take-notes/take-notes.component.scss
+++ b/src/app/components/take-notes/take-notes.component.scss
@@ -18,3 +18,9 @@
 .container{
     padding-top: 50px;
 }
+.design{
+    border-style:solid;
+    border-color:lightgray;
+    border-radius: 2.5%;
+    border-width: 1px;
+}
