--- a/src/app/components/take-notes/take-notes.component.html
+++ b/src/app/components/take-notes/take-notes.component.html
@@ -1,5 +1,5 @@
 <div class="container" fxLayoutAlign="center center">
-    <mat-card fxFlex="45" fxLayout="column">
+    <mat-card class="design" fxFlex="45" fxLayout="column">
         <div>
             <input class="titletext" matInput type="text" placeholder="Title"> 
         </div>
