--- a/src/app/components/take-notes/take-notes.component.scss
+++ b/src/app/components/take-notes/take-notes.component.scss
@@ -1,10 +1,10 @@
 .titletext{
     border:none;
     outline:none;
-    height:26px;
+    height:20px;
     width:100%;
     padding-bottom: 10px;
-    font-size: 20px;
+    font-size: 17px;
 }
 .takenote{
     border:none;
@@ -13,14 +13,36 @@
     width:100%;
     padding-bottom: 10px;
     padding-top: 10px;
-    font-size: 15px;
+    font-size: 17px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .container{
-    padding-top: 50px;
+    padding-top: 30px;
 }
-.design{
-    border-style:solid;
+.design2{
     border-color:lightgray;
     border-radius: 2.5%;
     border-width: 1px;
+    border-style: groove;
+}
+.close{
+    margin-left: 200px;
+}
+.maintext{
+    border:none;
+    outline:none;
+    height:18px;
+    width:100%;
+    font-size: 17px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.maintext::placeholder{
+    color: black;
+}
+.design1{
+    border-color:lightgray;
+    border-radius: 2.5%;
+    border-width: 1px;
+    width: 600px;
+    border-style: groove;
 }
