--- a/src/app/components/take-notes/take-notes.component.scss
+++ b/src/app/components/take-notes/take-notes.component.scss
@@ -2,6 +2,7 @@
     border:none;
     outline:none;
     height:20px;
+    font-weight: bolder;
     width:100%;
     padding-bottom: 10px;
     font-size: 17px;
