--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -1,9 +1,11 @@
 .keep_img {
+    padding-top: 9px;
+    padding-left: 8px;
     width : 40px;
     height: 40px;
 }
 .heading{
-    padding-top: 8px;
+    padding-top:14px;
     font-weight:normal;
     font-size: 22px;
     color: #5f6368;
