--- a/src/app/components/get-all-notes/get-all-notes.component.html
+++ b/src/app/components/get-all-notes/get-all-notes.component.html
@@ -1,3 +1,3 @@
 <app-take-notes></app-take-notes>
 
-<app-display-notes> [allnotes] ="notesarray" </app-display-notes>
+<app-display-notes fxLayout="row" [allnotes] ="notesarray"> </app-display-notes>
