--- a/src/app/components/take-notes/take-notes.component.scss
+++ b/src/app/components/take-notes/take-notes.component.scss
@@ -25,9 +25,10 @@
     border-radius: 2.5%;
     border-width: 1px;
     border-style: groove;
+    width: 632px;
 }
 .close{
-    margin-left: 200px;
+    margin-left: 250px;
 }
 .maintext{
     border:none;
