trash list and archive list is done

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -15,7 +15,7 @@
         </div>
         <div class="icons" fxLayout="row" fxLayoutAlign="end" fxLayoutGap="20px">
           <div>
-            <button mat-icon-button aria-label="redresh"><img src="assets/refresh_black_24dp.svg"></button>
+            <button mat-icon-button (click)="refresh()"><img src="assets/refresh_black_24dp.svg"></button>
           </div>
           <div>
             <button mat-icon-button><img src="assets/view_agenda_black_24dp.svg"></button>
@@ -29,6 +29,7 @@
           <div>
             <button mat-icon-button [matMenuTriggerFor]="log"><img src="assets/account_circle_black_24dp.svg"></button>
             <mat-menu #log="matMenu">
+               <h3>Welcome User</h3>
                <button mat-menu-item (click)="LogOut()">Log Out</button>
             </mat-menu>
           </div>
@@ -37,11 +38,11 @@
       <mat-sidenav-container class="sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
           <mat-sidenav #snav  [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches" fixedTopGap="56" opened="true">
                 <mat-nav-list (click)="isExpanded=!isExpanded" >            
-                  <mat-list-item class="order"><button mat-icon-button class="btns"><img src="assets/lightbulb_black_24dp.svg"></button><p class="names" *ngIf="isExpanded">Notes</p> </mat-list-item>             
+                  <mat-list-item class="order" (click)="notes()"><button mat-icon-button class="btns"><img src="assets/lightbulb_black_24dp.svg"></button><p class="names" *ngIf="isExpanded">Notes</p> </mat-list-item>             
                   <mat-list-item class="order"><button mat-icon-button class="btns"><img src="assets/notifications_black_24dp.svg"></button><p class="names" *ngIf="isExpanded">Reminders</p> </mat-list-item>        
                   <mat-list-item class="order"><button mat-icon-button class="btns"><img src="assets/edit_black_24dp.svg"></button><p class="names" *ngIf="isExpanded">Edit labels</p> </mat-list-item>               
-                  <mat-list-item class="order"><button mat-icon-button class="btns"><img src="assets/archive_black_24dp.svg"></button><p class="names" *ngIf="isExpanded">Archive</p> </mat-list-item>                  
-                  <mat-list-item class="order"><button mat-icon-button class="btns"><img src="assets/delete_black_24dp.svg"></button><p class="names" *ngIf="isExpanded">Trash</p> </mat-list-item>  
+                  <mat-list-item class="order" (click)="archive()"><button  mat-icon-button class="btns"><img src="assets/archive_black_24dp.svg"></button><p class="names" *ngIf="isExpanded">Archive</p> </mat-list-item>                  
+                  <mat-list-item class="order" (click)="trash()"><button mat-icon-button class="btns"><img src="assets/delete_black_24dp.svg"></button><p class="names" *ngIf="isExpanded">Trash</p> </mat-list-item>  
                 </mat-nav-list>
           </mat-sidenav>
           <mat-sidenav-content class="content">
