--- a/src/app/components/icons/icons.component.html
+++ b/src/app/components/icons/icons.component.html
@@ -1,9 +1,17 @@
 <div class="container" fxLayout="row" fxLayoutGap="3px">
     <button mat-icon-button><img src="assets/add_alert_black_18dp.svg"></button>
     <button mat-icon-button><img src="assets/person_add_alt_black_18dp.svg"></button>
-    <button mat-icon-button><img src="assets/palette_black_18dp.svg"></button>
+    <button mat-icon-button [matMenuTriggerFor]="colorpalette"><img src="assets/palette_black_18dp.svg"></button>
+    <mat-menu #colorpalette="matMenu">
+        <button mat-menu-item style="background-color:#ccff90"></button>
+        <button mat-menu-item style="background-color:#aaffeb"></button>
+        <button mat-menu-item style="background-color:#fdcfe8"></button>
+        <button mat-menu-item style="background-color:#fff7e6"></button>
+        <button mat-menu-item style="background-color:#fff475"></button>
+        <button mat-menu-item style="background-color:#cbf0f8"></button>     
+    </mat-menu>
     <button mat-icon-button><img src="assets/image_black_18dp.svg"></button>
-    <button mat-icon-button><img src="assets/archive_black_18dp.svg"></button>
+    <button mat-icon-button (click)="archive()"><img src="assets/archive_black_18dp.svg"></button>
     <button mat-icon-button [matMenuTriggerFor]="more"><img src="assets/more_vert_black_18dp.svg"></button>
     <mat-menu #more="matMenu">
         <button mat-menu-item (click)="delete()">Delete Note</button>
