--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,52 +1,62 @@
 <div class="container" [class.example-is-mobile]="mobileQuery.matches">
-      <mat-toolbar class="toolbar">
-        <button mat-icon-button class="menu" (click)="isExpanded=!isExpanded"><img src="assets/menu_black_24dp.svg"></button>
-        <div fxLayout="row" fxLayoutAlign="center" fxLayoutGap="6px">
-          <img class="keep_img" src="assets/keep_2020q4_48dp.png" alt="">
-          <p class="heading">Fundoo</p>
-        </div>
-        <div class="searchBar" fxLayout="row" fxLayoutAlign="start center">
-          <div>
-            <button mat-icon-button class="search"><img src="assets/search_black_24dp.svg"></button>
-          </div>
-          <div>
-            <input type="text" class="searchtext" placeholder="Search">
-          </div>
-        </div>
-        <div class="icons" fxLayout="row" fxLayoutAlign="end" fxLayoutGap="20px">
-          <div>
-            <button mat-icon-button (click)="refresh()"><img src="assets/refresh_black_24dp.svg"></button>
-          </div>
-          <div>
-            <button mat-icon-button><img src="assets/view_agenda_black_24dp.svg"></button>
-          </div>
-          <div>
-            <button mat-icon-button><img src="assets/settings_black_24dp.svg"></button>
-          </div>
-          <div>
-            <button mat-icon-button><img src="assets/apps_black_24dp.svg"></button>
-          </div>
-          <div>
-            <button mat-icon-button [matMenuTriggerFor]="log"><img src="assets/account_circle_black_24dp.svg"></button>
-            <mat-menu #log="matMenu">
-               <h3>Welcome User</h3>
-               <button mat-menu-item (click)="LogOut()">Log Out</button>
-            </mat-menu>
-          </div>
-        </div>
-      </mat-toolbar>
-      <mat-sidenav-container class="sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
-          <mat-sidenav #snav  [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches" fixedTopGap="56" opened="true">
-                <mat-nav-list (click)="isExpanded=!isExpanded" >            
-                  <mat-list-item class="order" (click)="notes()"><button mat-icon-button class="btns"><img src="assets/lightbulb_black_24dp.svg"></button><p class="names" *ngIf="isExpanded">Notes</p> </mat-list-item>             
-                  <mat-list-item class="order"><button mat-icon-button class="btns"><img src="assets/notifications_black_24dp.svg"></button><p class="names" *ngIf="isExpanded">Reminders</p> </mat-list-item>        
-                  <mat-list-item class="order"><button mat-icon-button class="btns"><img src="assets/edit_black_24dp.svg"></button><p class="names" *ngIf="isExpanded">Edit labels</p> </mat-list-item>               
-                  <mat-list-item class="order" (click)="archive()"><button  mat-icon-button class="btns"><img src="assets/archive_black_24dp.svg"></button><p class="names" *ngIf="isExpanded">Archive</p> </mat-list-item>                  
-                  <mat-list-item class="order" (click)="trash()"><button mat-icon-button class="btns"><img src="assets/delete_black_24dp.svg"></button><p class="names" *ngIf="isExpanded">Trash</p> </mat-list-item>  
-                </mat-nav-list>
-          </mat-sidenav>
-          <mat-sidenav-content class="content">
-            <router-outlet></router-outlet>
-          </mat-sidenav-content>
-      </mat-sidenav-container>
+  <mat-toolbar class="toolbar">
+    <button mat-icon-button matTooltip="Main Menu" class="menu" (click)="isExpanded=!isExpanded"><img src="assets/menu_black_24dp.svg"></button>
+    <div fxLayout="row" fxLayoutAlign="center" fxLayoutGap="6px">
+      <img class="keep_img" src="assets/keep_2020q4_48dp.png">
+      <p class="heading">Fundoo</p>
+    </div>
+    <div class="searchBar" fxLayout="row" fxLayoutAlign="start center">
+      <div>
+        <button mat-icon-button matTooltip="Search" class="search"><img src="assets/search_black_24dp.svg"></button>
+      </div>
+      <div>
+        <input type="text" class="searchtext" placeholder="Search">
+      </div>
+    </div>
+    <div class="icons" fxLayout="row" fxLayoutAlign="end" fxLayoutGap="20px">
+      <div>
+        <button mat-icon-button matTooltip="Refresh" (click)="refresh()"><img src="assets/refresh_black_24dp.svg"></button>
+      </div>
+      <div>
+        <button mat-icon-button matTooltip="List View"><img src="assets/view_agenda_black_24dp.svg"></button>
+      </div>
+      <div>
+        <button mat-icon-button matTooltip="Settings"><img src="assets/settings_black_24dp.svg"></button>
+      </div>
+      <div>
+        <button mat-icon-button matTooltip="Apps"><img src="assets/apps_black_24dp.svg"></button>
+      </div>
+      <div>
+        <button mat-icon-button [matMenuTriggerFor]="log" matTooltip="Account"><img src="assets/account_circle_black_24dp.svg"></button>
+        <mat-menu #log="matMenu">
+          <h3>Welcome User</h3>
+          <button mat-menu-item (click)="LogOut()">Log Out</button>
+        </mat-menu>
+      </div>
+    </div>
+  </mat-toolbar>
+  <mat-sidenav-container class="sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
+    <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches" fixedTopGap="56" opened="true">
+      <mat-nav-list (click)="isExpanded=!isExpanded">
+        <mat-list-item class="order" (click)="notes()"><button mat-icon-button class="btns"><img src="assets/lightbulb_black_24dp.svg"></button>
+          <p class="names" *ngIf="isExpanded">Notes</p>
+        </mat-list-item>
+        <mat-list-item class="order"><button mat-icon-button class="btns"><img src="assets/notifications_black_24dp.svg"></button>
+          <p class="names" *ngIf="isExpanded">Reminders</p>
+        </mat-list-item>
+        <mat-list-item class="order"><button mat-icon-button class="btns"><img src="assets/edit_black_24dp.svg"></button>
+          <p class="names" *ngIf="isExpanded">Edit labels</p>
+        </mat-list-item>
+        <mat-list-item class="order" (click)="archive()"><button mat-icon-button class="btns"><img src="assets/archive_black_24dp.svg"></button>
+          <p class="names" *ngIf="isExpanded">Archive</p>
+        </mat-list-item>
+        <mat-list-item class="order" (click)="trash()"><button mat-icon-button class="btns"><img src="assets/delete_black_24dp.svg"></button>
+          <p class="names" *ngIf="isExpanded">Trash</p>
+        </mat-list-item>
+      </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content class="content">
+      <router-outlet></router-outlet>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
 </div>
