--- a/src/app/components/icons/icons.component.scss
+++ b/src/app/components/icons/icons.component.scss
@@ -1,6 +1,13 @@
-
 .container{
     display: flex;
     position: relative;
     opacity:0.7;
+}
+.display{
+    padding-right: 150px;
+}
+.btn:hover{
+    outline-style: solid;
+    outline-width: 2px;
+    outline-color: darkgray;
 }
