--- a/src/app/components/get-all-archive-notes/get-all-archive-notes.component.html
+++ b/src/app/components/get-all-archive-notes/get-all-archive-notes.component.html
@@ -1,1 +1,1 @@
-<app-display-notes [allnotes]="archiveNotes"></app-display-notes>
+<app-display-notes (changeColorOfNote)="unarchive($event)" [allnotes]="archiveNotes"></app-display-notes>
