--- a/src/app/components/get-all-trash-notes/get-all-trash-notes.component.html
+++ b/src/app/components/get-all-trash-notes/get-all-trash-notes.component.html
@@ -1,1 +1,1 @@
-<app-display-notes [allnotes]="trashNotes"></app-display-notes>
+<app-display-notes (changeColorOfNote)="trash($event)" [allnotes]="trashNotes"></app-display-notes>
