--- a/src/app/components/icons/icons.component.scss
+++ b/src/app/components/icons/icons.component.scss
@@ -11,3 +11,13 @@
     outline-width: 2px;
     outline-color: darkgray;
 }
+.design{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    max-width: 180px;
+}
+.btn{
+    margin-right: 1px;
+    white-space: 2px;
+}
