--- a/src/app/components/display-notes/display-notes.component.html
+++ b/src/app/components/display-notes/display-notes.component.html
@@ -1,5 +1,5 @@
 <div class="design" fxFlexFill fxLayout="row wrap" fxLayoutGap="30px grid">
-    <div *ngFor="let note of allnotes">
+    <div *ngFor='let note of allnotes | searchFilter:searchWord'>
         <mat-card class="matcard" [style.background]="note.color">
             <div>
                 <mat-card-title (click)="openDialog(note)">{{note.title}}</mat-card-title>
