--- a/src/app/components/forgotpassword/forgotpassword.component.html
+++ b/src/app/components/forgotpassword/forgotpassword.component.html
@@ -1,5 +1,5 @@
-<div class="div" fxLayoutAlign="center">
-    <mat-card class="design" fxFlex="25">
+<div class="div" fxLayoutAlign="center center">
+    <mat-card fxFlex.xs="95" fxFlex.sm="90" class="design" fxFlex="27">
         <form [formGroup]="forgotpasswordForm" (ngSubmit)="forgotpassword()">
             <div fxLayout="column" fxLayoutAlign="center center">
                 <h1>
@@ -21,7 +21,7 @@
                     <mat-error>Email is required</mat-error>
                 </mat-form-field>
             </div>
-            <div class="bottom">
+            <div class="bottom" fxLayoutAlign="end">
                 <button mat-flat-button class="button">Submit</button>
             </div>
         </form>
