--- a/src/app/components/forgotpassword/forgotpassword.component.scss
+++ b/src/app/components/forgotpassword/forgotpassword.component.scss
@@ -1,5 +1,6 @@
 .div{
-    margin-top: 10.5%;
+    width: 100vw;
+    height: 100vh;
 }
 .design{
     border-style:double;
@@ -9,7 +10,6 @@
 }
 .button{
     text-align: center;
-    margin-left: 264px;
     height:38px;
     width: 80px;
     color:white;
