--- a/src/app/components/resetpassword/resetpassword.component.html
+++ b/src/app/components/resetpassword/resetpassword.component.html
@@ -1,5 +1,5 @@
-<div class="div" fxLayoutAlign="center">
-    <mat-card class="design" fxFlex="25">
+<div class="div" fxLayoutAlign="center center">
+    <mat-card fxFlex.xs="95" fxFlex.sm="90" class="design" fxFlex="25">
         <form [formGroup]="resetpasswordForm" (ngSubmit)="resetpassword()">
             <div fxLayout="column" fxLayoutAlign="center center">
                 <h1>
@@ -26,7 +26,7 @@
             </div>
             <p class="hint">Use 6 or more characters with a mix of letters, numbers & symbols</p>
             <mat-checkbox class="check" matSuffix (click)="checkboxPassword()">Show Password</mat-checkbox>
-            <div class="bottom">
+            <div class="bottom" fxLayoutAlign="end">
                 <button mat-flat-button class="button">Submit</button>
             </div>
         </form>
