--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,5 +1,6 @@
 .div{
-    margin-top: 7.5%;
+    width:100vw;
+    height:100vh;
 }
 .design{
     border-style:double;
@@ -8,25 +9,25 @@
     border-width:0.5px;
 }
 .link1{
-    text-align:start;
-    margin-left: -16px;
+    text-decoration: none;
     font-size: 16px;
     color:#1a73e8;
+    padding-left: 1px;
 }
 .link2{
-    margin-left: -17px;
+    text-align:start;
     font-size: 16px;
     color:#1a73e8;
+    padding-left: 1px;
 }
  .button{
      text-align: center;
-     margin-left: 144px;
      height:38px;
      width: 80px;
      color:white;
      background-color:#1a73e8;
  }
-.bottom{
-    padding-top: 10%;
-    padding-bottom: 5%;
-}
+ .bottom{
+     padding-top: 20px;
+     padding-bottom: 5px;
+ }
